// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UserPanel. Snapshots > Default  1`] = `
<div>
  <div
    class="_UserPanel_59f17f"
    data-testid="user-panel"
  >
    <div
      class="_Head_59f17f"
    >
      <span
        data-testid="user-panel-title"
      >
        Profil
      </span>
      <button
        class="_ControlButtonText_3f4280 _Right_3f4280 _MD_3f4280 _TextPrimary_3f4280"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil _Icon_3f4280"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
        <span
          class="_Content_3f4280 _Medium_3f4280"
        >
          Bearbeiten
        </span>
      </button>
    </div>
    <ul
      class="_Info_59f17f"
    >
      <li>
        Max Mustermann
      </li>
      <li>
        max@example.com
      </li>
      <li>
        +49 421 000000
      </li>
    </ul>
  </div>
</div>
`;

exports[`UserPanel. Snapshots > WithBaseBehavior  1`] = `
<div>
  <div
    class="_UserPanel_59f17f color-theme-primary"
    data-testid="custom-test-id"
  >
    <div
      class="_Head_59f17f"
    >
      <span
        data-testid="user-panel-title"
      >
        Profil
      </span>
      <button
        class="_ControlButtonText_3f4280 _Right_3f4280 _MD_3f4280 _TextPrimary_3f4280"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil _Icon_3f4280"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
        <span
          class="_Content_3f4280 _Medium_3f4280"
        >
          Bearbeiten
        </span>
      </button>
    </div>
    <ul
      class="_Info_59f17f"
    >
      <li>
        Max Mustermann
      </li>
      <li>
        max@example.com
      </li>
      <li>
        +49 421 000000
      </li>
    </ul>
  </div>
</div>
`;
